# kira_midi_player

./: Cargo.toml
examples/: simple_player.rs
src/: lib.rs  sound_bank.rs
