[package]
name = "midi_renderer"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = { git = "https://github.com/tesselode/kira.git", branch="main" }
midly = "0.5.1"
regex = "1.4.2"
